--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
         <title>3-Column Preview Card Component</title>
     </head>
     <body>
-        <div class="main">
+        <main>
             <div class="section">
                 <div class="car-description">
                     <img src="images/icon-sedans.svg" alt="" srcset="">
-                    <h1>Sedans</h1>
+                    <h2>Sedans</h2>
                     <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising 
                         in the city or on your next road trip.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="car-description">
                     <img src="images/icon-suvs.svg" alt="" srcset="">
-                    <h1>SUVs</h1>
+                    <h2>SUVs</h2>
                     <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next 
                         family vacation and off-road adventures.</p>
                     <a href="">Learn More</a>
                 </div>
                 <div class="car-description">
                     <img src="images/icon-luxury.svg" alt="" srcset="">
-                    <h1>Luxury</h1>
+                    <h2>Luxury</h2>
                     <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort 
                         of a luxury rental and arrive in style.</p>
                     <a href="">Learn More</a>
@@ -36,6 +36,6 @@
                 Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
                 Coded by <a href="https://github.com/ayrtton" target="_blank">Ayrton</a>.
             </div>
-        </div>
+        </main>
     </body>
 </html>
